# functional-programming-sessions

./: .gitignore  README.md
BankKata/F# - Pedro & Jorge & Alex/BankKataFSharp/: BankKataFSharp.sln
BankKata/F# - Pedro & Jorge & Alex/BankKataFSharp/Tests/: Program.fs  Tests.fsproj
BankKata/Haskell - Carlos & Christian/bank-kata/: bank-kata.cabal
BankKata/Haskell - Carlos & Christian/bank-kata/src/: BankAccount.hs
BankKata/Haskell - Carlos & Christian/bank-kata/test/: BankkataSpec.hs
functional-calisthenics/: .gitignore  README.md
functional-calisthenics/TicTacToe/: build.sbt
functional-calisthenics/TicTacToe/Scala/: .gitignore
functional-calisthenics/TicTacToe/src/main/scala/: TicTacToe.scala
haskell/: .chapterThree.hs.swp  Makefile  chapterFive.hs  chapterThree.hs
javascript/: .eslintrc  Gruntfile.js  Makefile  README.md  package.json
javascript/spec/: option.spec.js  partial.spec.js  pattern_matching.spec.js  stream.spec.js  streem.spec.js
javascript/src/: option.js  partial.js  pattern_matching.js  stream.js  streem.js
katas/: README.md
katas/BankKata/F# - Pedro & Jorge & Alex/BankKataFSharp/: BankKataFSharp.userprefs
katas/BankKata/Haskell-Carlos&Christian/bank-kata/: README.md  bank-kata.cabal
katas/BankKata/Scala - Sergio & Andrzej/fp-bank-kata/: .gitignore  build.sbt
scala-book/haskell/: README.md  chapterThree.hs
scala-book/javascript/: README.md  package.json
scala-book/javascript/spec/: partial.spec.js  pattern_matching.spec.js  streem.spec.js
scala-book/javascript/src/: option.js
scala-book/scala/: README.md  build.sbt
(+15 files in other folders)
