name:                bank-kata
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/panavtec/bank-kata#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Panadero
maintainer:          panavtec@gmail.com
copyright:           Apache2
category:            katas
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BankAccount
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable bank-kata
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bank-kata
  default-language:    Haskell2010

test-suite bank-kata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bank-kata
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ panavtec/bank-kata
